--- a/css/main.css
+++ b/css/main.css
@@ -257,7 +257,13 @@ h3 {
 
   .about-pic {
     float: none;
-    width: 60%;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 15px;
+  }
+
+  .about-text {
+    width: 100%;
   }
 
   .box {
@@ -266,11 +272,13 @@ h3 {
 
   .contact-pic {
     float: none;
-    width: 80%;
+    width: 100%;
+    height: 100%
   }
 
   .contact-buttons {
     height: 400px;
+    width: 100%;
   }
 }
 
